--- a/TaskManager/src/view/Register.fxml
+++ b/TaskManager/src/view/Register.fxml
@@ -1,30 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="135.0" />
+    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="339.0" />
+      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="135.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Pane prefHeight="347.0" prefWidth="309.0">
-         <children>
-            <VBox layoutX="45.0" layoutY="16.0" prefHeight="318.0" prefWidth="232.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Register" wrappingWidth="81.13671875" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
-                  <TextField fx:id="username" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-                  <TextField fx:id="password" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Repeat password" />
-                  <TextField fx:id="password1" />
-                  <Button mnemonicParsing="false" onAction="#handleRegister" text="Register" />
-                  <Text fx:id="statusbar" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="238.13671875" />
-               </children>
-            </VBox>
-         </children>
-      </Pane>
+      <Label prefHeight="149.0" prefWidth="325.0" text="Task Manager" GridPane.columnIndex="1">
+         <font>
+            <Font size="50.0" />
+         </font>
+         <padding>
+            <Insets top="25.0" />
+         </padding>
+      </Label>
+      <Circle fill="WHITE" radius="43.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2">
+         <GridPane.margin>
+            <Insets right="5.0" top="5.0" />
+         </GridPane.margin>
+      </Circle>
+      <Label text="LOGO" GridPane.columnIndex="2">
+         <padding>
+            <Insets right="30.0" top="40.0" />
+         </padding>
+      </Label>
+      <Label text="Username :" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <font>
+            <Font size="30.0" />
+         </font>
+         <GridPane.margin>
+            <Insets bottom="105.0" right="235.0" />
+         </GridPane.margin>
+      </Label>
+      <Label prefHeight="92.0" prefWidth="146.0" text="Password :" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <font>
+            <Font size="30.0" />
+         </font>
+         <GridPane.margin>
+            <Insets right="220.0" />
+         </GridPane.margin>
+      </Label>
+      <Label prefHeight="45.0" prefWidth="252.0" text="Repeat password :" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <font>
+            <Font size="30.0" />
+         </font>
+         <GridPane.margin>
+            <Insets left="-95.0" right="220.0" top="100.0" />
+         </GridPane.margin>
+      </Label>
+      <TextField fx:id="username" prefHeight="25.0" prefWidth="396.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets bottom="100.0" left="190.0" right="25.0" />
+         </GridPane.margin>
+      </TextField>
+      <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets bottom="50.0" left="190.0" right="25.0" top="55.0" />
+         </GridPane.margin>
+      </PasswordField>
+      <PasswordField GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="190.0" right="25.0" top="100.0" />
+         </GridPane.margin>
+      </PasswordField>
+      <Button mnemonicParsing="false" onAction="#handleRegister" text="Register" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <font>
+            <Font size="25.0" />
+         </font>
+         <GridPane.margin>
+            <Insets bottom="80.0" />
+         </GridPane.margin>
+      </Button>
+      <Text fx:id="statusbar" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="328.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <ImageView fitHeight="113.0" fitWidth="134.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets right="25.0" />
+         </GridPane.margin>
+         <image>
+            <Image url="@../../../../photoUtilisateur.png" />
+         </image>
+      </ImageView>
    </children>
-</AnchorPane>
+</GridPane>
