--- a/TaskManager/src/view/NewTask.fxml
+++ b/TaskManager/src/view/NewTask.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -33,7 +34,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Line startX="850.0" GridPane.columnIndex="1">
+      <Line endX="100.0" startX="875.0" GridPane.columnIndex="1">
          <GridPane.margin>
             <Insets top="30.0" />
          </GridPane.margin>
@@ -58,73 +59,65 @@
             <Insets left="5.0" top="25.0" />
          </GridPane.margin>
       </Text>
+      <TextField fx:id="NewTask_name" promptText="New Task" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="50.0" top="20.0" />
+         </GridPane.margin>
+      </TextField>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2">
          <children>
-            <Text fx:id="Task_performer" layoutX="32.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
+            <Text layoutX="29.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Text fx:id="Task_description" layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
+            <Text layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
-            <Text fx:id="Task_author" layoutX="30.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
+            <TextArea fx:id="NewTask_description" layoutX="129.0" layoutY="35.0" prefHeight="66.0" prefWidth="348.0" />
+            <Text layoutX="30.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Text fx:id="Task_creationDate" layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
+            <Text layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Text fx:id="Task_priority" layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
+            <Text layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Button fx:id="Task_validateChanges" layoutX="372.0" layoutY="318.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="342.0" text="Validate changes">
+            <Text layoutX="31.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
-                  <Font size="24.0" />
+                  <Font size="15.0" />
+               </font>
+            </Text>
+            <Button fx:id="NewTask_createTask" layoutX="449.0" layoutY="174.0" mnemonicParsing="false" text="Create">
+               <font>
+                  <Font size="40.0" />
                </font>
             </Button>
-            <DatePicker fx:id="Task_creationDate" layoutX="158.0" layoutY="162.0" />
-            <MenuButton fx:id="Task_priority" layoutX="99.0" layoutY="194.0" mnemonicParsing="false" text="Priority">
+            <TextField fx:id="NewTask_author" layoutX="96.0" layoutY="118.0" />
+            <DatePicker fx:id="NewTask_creationDate" layoutX="158.0" layoutY="162.0" />
+            <MenuButton fx:id="NewTask_priority" layoutX="99.0" layoutY="194.0" mnemonicParsing="false" text="Priority">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </MenuButton>
-            <DatePicker fx:id="Task_deadline" layoutX="110.0" layoutY="269.0" />
-            <MenuButton fx:id="Task_performer" layoutX="112.0" layoutY="305.0" mnemonicParsing="false" text="Performer">
+            <DatePicker fx:id="NewTask_deadline" layoutX="107.0" layoutY="236.0" />
+            <MenuButton fx:id="NewTask_performer" layoutX="109.0" layoutY="273.0" mnemonicParsing="false" text="Performer">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </MenuButton>
-            <Text fx:id="Task_description" layoutX="134.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="416.13671875" />
-            <Text fx:id="Task_state" layoutX="30.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="State :">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Text>
-            <Text fx:id="Task_deadline" layoutX="32.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Text>
-            <RadioButton fx:id="Task_inProgress" layoutX="75.0" layoutY="238.0" mnemonicParsing="false" text="In progress" />
-            <RadioButton fx:id="Task_suspended" layoutX="169.0" layoutY="238.0" mnemonicParsing="false" text="Suspended" />
-            <RadioButton fx:id="Task_finished" layoutX="267.0" layoutY="238.0" mnemonicParsing="false" text="Finished" />
-            <Text fx:id="Task_author" layoutX="93.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="130.0" />
          </children>
       </AnchorPane>
-      <Text fx:id="Task_name" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="167.0" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets left="50.0" top="25.0" />
-         </GridPane.margin>
-      </Text>
    </children>
 </GridPane>
