--- a/TaskManager/src/view/App.fxml
+++ b/TaskManager/src/view/App.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -55,7 +56,11 @@
             <Insets top="25.0" />
          </GridPane.margin>
       </Label>
-      <FlowPane fx:id="App_flowPane" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+      <ScrollPane GridPane.columnSpan="3" GridPane.rowIndex="2">
+         <content>
+            <FlowPane fx:id="App_flowPane" maxHeight="384.0" maxWidth="775.0" prefHeight="384.0" prefWidth="775.0" />
+         </content>
+      </ScrollPane>
       <ImageView fx:id="App_add" fitHeight="56.0" fitWidth="56.0" onMouseClicked="#addTask" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <image>
             <Image url="@../image/logo_ajouter.png" />
