--- a/TaskManager/src/view/PreviewTask.fxml
+++ b/TaskManager/src/view/PreviewTask.fxml
@@ -7,31 +7,36 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label GridPane.halignment="CENTER" GridPane.valignment="TOP">
+      <Label text="FDSQDS" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
          <font>
-            <Font size="70.0" />
+            <Font size="15.0" />
          </font>
       </Label>
-      <Label GridPane.valignment="BOTTOM">
+      <Label GridPane.rowIndex="2" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <GridPane.margin>
-            <Insets bottom="250.0" left="50.0" />
+            <Insets left="10.0" />
          </GridPane.margin>
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label GridPane.valignment="BOTTOM">
+      <Label GridPane.rowIndex="3" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -39,29 +44,29 @@
             <Font size="20.0" />
          </font>
          <GridPane.margin>
-            <Insets bottom="200.0" left="50.0" />
+            <Insets left="10.0" />
          </GridPane.margin>
       </Label>
-      <Label GridPane.valignment="BOTTOM">
+      <Label GridPane.rowIndex="4" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <font>
-            <Font size="20.0" />
+            <Font size="14.0" />
          </font>
          <GridPane.margin>
-            <Insets bottom="150.0" left="50.0" />
+            <Insets left="10.0" />
          </GridPane.margin>
       </Label>
-      <Label GridPane.valignment="BOTTOM">
+      <Label GridPane.rowIndex="5" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <font>
-            <Font size="20.0" />
+            <Font size="14.0" />
          </font>
          <GridPane.margin>
-            <Insets bottom="100.0" left="50.0" />
+            <Insets left="10.0" />
          </GridPane.margin>
       </Label>
    </children>
