--- a/TaskManager/src/view/PreviewTask.fxml
+++ b/TaskManager/src/view/PreviewTask.fxml
@@ -18,11 +18,20 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="FDSQDS" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+      <Label GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <font>
-            <Font size="15.0" />
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label GridPane.rowIndex="1">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <font>
+            <Font size="14.0" />
          </font>
       </Label>
       <Label GridPane.rowIndex="2" GridPane.valignment="CENTER">
@@ -33,7 +42,7 @@
             <Insets left="10.0" />
          </GridPane.margin>
          <font>
-            <Font size="20.0" />
+            <Font size="14.0" />
          </font>
       </Label>
       <Label GridPane.rowIndex="3" GridPane.valignment="CENTER">
@@ -41,7 +50,7 @@
             <Insets />
          </opaqueInsets>
          <font>
-            <Font size="20.0" />
+            <Font size="14.0" />
          </font>
          <GridPane.margin>
             <Insets left="10.0" />
@@ -68,6 +77,14 @@
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
+      </Label>
+      <Label GridPane.rowIndex="6">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <font>
+            <Font size="14.0" />
+         </font>
       </Label>
    </children>
 </GridPane>
