--- a/TaskManager/src/view/App.fxml
+++ b/TaskManager/src/view/App.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
@@ -26,9 +25,9 @@
     <RowConstraints maxHeight="383.0" minHeight="10.0" prefHeight="383.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Task Manager" GridPane.columnIndex="1">
+      <Label graphicTextGap="0.0" text="Task Manager" GridPane.columnIndex="1">
          <font>
-            <Font size="20.0" />
+            <Font name="Palatino Linotype Italic" size="20.0" />
          </font>
       </Label>
       <Line endX="200.0" startX="1100.0" GridPane.columnIndex="1">
@@ -41,19 +40,9 @@
             <Insets left="10.0" top="20.0" />
          </GridPane.margin>
       </TextField>
-      <Circle fill="WHITE" radius="27.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets bottom="30.0" top="6.0" />
-         </GridPane.margin>
-      </Circle>
-      <Label text="LOGO" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets top="25.0" />
-         </GridPane.margin>
-      </Label>
       <ScrollPane GridPane.columnSpan="3" GridPane.rowIndex="2">
          <content>
-            <FlowPane fx:id="App_flowPane" maxHeight="384.0" maxWidth="775.0" prefHeight="384.0" prefWidth="775.0" />
+            <FlowPane fx:id="App_flowPane" maxHeight="510.0" maxWidth="780.0" prefHeight="510.0" prefWidth="744.0" />
          </content>
       </ScrollPane>
       <ImageView fx:id="App_add" fitHeight="56.0" fitWidth="56.0" onMouseClicked="#createNewTask" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -62,6 +51,14 @@
          </image>
          <GridPane.margin>
             <Insets right="10.0" top="5.0" />
+         </GridPane.margin>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <image>
+            <Image url="@../image/Logoensim.gif" />
+         </image>
+         <GridPane.margin>
+            <Insets top="5.0" />
          </GridPane.margin>
       </ImageView>
    </children>
