--- a/TaskManager/src/view/PreviewTask.fxml
+++ b/TaskManager/src/view/PreviewTask.fxml
@@ -23,7 +23,7 @@
    <children>
       <Label GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <font>
-            <Font size="18.0" />
+            <Font name="Palatino Linotype" size="18.0" />
          </font>
       </Label>
       <Label GridPane.rowIndex="1">
