--- a/TaskManager/bin/view/Task.fxml
+++ b/TaskManager/bin/view/Task.fxml
@@ -4,11 +4,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -40,16 +41,6 @@
             <Insets top="95.0" />
          </GridPane.margin>
       </Line>
-      <Circle fill="WHITE" radius="27.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets bottom="30.0" top="6.0" />
-         </GridPane.margin>
-      </Circle>
-      <Label text="LOGO" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets top="25.0" />
-         </GridPane.margin>
-      </Label>
       <Text fx:id="Task_name" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="194.0" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets left="10.0" />
@@ -110,5 +101,10 @@
             <Label fx:id="Task_Title" layoutX="356.0" layoutY="14.0" text="Label" />
          </children>
       </AnchorPane>
+      <ImageView fitHeight="89.0" fitWidth="226.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <image>
+            <Image url="@../image/Logoensim.gif" />
+         </image>
+      </ImageView>
    </children>
 </GridPane>
