--- a/TaskManager/src/view/NewTask.fxml
+++ b/TaskManager/src/view/NewTask.fxml
@@ -34,7 +34,7 @@
             <Font name="Palatino Linotype" size="20.0" />
          </font>
       </Label>
-      <Line endX="100.0" startX="875.0" GridPane.columnIndex="1">
+      <Line endX="100.0" startX="900.0" GridPane.columnIndex="1">
          <GridPane.margin>
             <Insets top="30.0" />
          </GridPane.margin>
@@ -62,30 +62,35 @@
                </font>
             </Text>
             <TextArea fx:id="NewTask_description" layoutX="129.0" layoutY="35.0" prefHeight="66.0" prefWidth="348.0" />
-            <Text layoutX="29.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
+            <Text layoutX="35.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox fx:id="NewTask_priority" layoutX="97.0" layoutY="171.0" prefWidth="150.0" visibleRowCount="3" />
-            <Text layoutX="30.0" layoutY="233.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
+            <ComboBox fx:id="NewTask_priority" layoutX="97.0" layoutY="136.0" prefWidth="150.0" visibleRowCount="3" />
+            <Text layoutX="29.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <DatePicker fx:id="NewTask_deadline" layoutX="107.0" layoutY="214.0" />
-            <Text layoutX="28.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
+            <DatePicker fx:id="NewTask_deadline" layoutX="107.0" layoutY="189.0" />
+            <Text layoutX="28.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox fx:id="NewTask_performer" layoutX="107.0" layoutY="261.0" prefWidth="150.0" visibleRowCount="3" />
-            <Button fx:id="NewTask_createTask" layoutX="496.0" layoutY="218.0" mnemonicParsing="false" onAction="#createTask" text="Create">
+            <ComboBox fx:id="NewTask_performer" layoutX="107.0" layoutY="238.0" prefWidth="150.0" visibleRowCount="3" />
+            <Button fx:id="NewTask_createTask" layoutX="451.0" layoutY="157.0" mnemonicParsing="false" onAction="#createTask" prefHeight="65.0" prefWidth="255.0" text="Create" textFill="#1bb250">
                <font>
-                  <Font size="40.0" />
+                  <Font size="30.0" />
                </font>
             </Button>
             <Text fx:id="NewTask_statusbar" layoutX="45.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+            <ImageView fx:id="NewTask_return" fitHeight="65.0" fitWidth="110.0" layoutX="665.0" layoutY="321.0" onMouseClicked="#handleReturn" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/retour.gif" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <ImageView fitHeight="61.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
