--- a/TaskManager/src/view/TaskEdit.fxml
+++ b/TaskManager/src/view/TaskEdit.fxml
@@ -8,11 +8,12 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -22,15 +23,11 @@
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="135.0" />
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="339.0" />
       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="135.0" />
-      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="135.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="29.0" valignment="TOP" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="383.0" minHeight="10.0" prefHeight="383.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="66.0" valignment="TOP" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="408.0" minHeight="10.0" prefHeight="382.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label text="Task Manager" GridPane.columnIndex="1">
@@ -38,7 +35,7 @@
             <Font name="Palatino Linotype" size="20.0" />
          </font>
       </Label>
-      <Line startX="850.0" GridPane.columnIndex="1">
+      <Line startX="800.0" GridPane.columnIndex="1">
          <GridPane.margin>
             <Insets top="30.0" />
          </GridPane.margin>
@@ -48,78 +45,74 @@
             <Insets top="95.0" />
          </GridPane.margin>
       </Line>
-      <Circle fill="WHITE" radius="27.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets bottom="30.0" top="6.0" />
-         </GridPane.margin>
-      </Circle>
-      <Label text="LOGO" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets top="25.0" />
-         </GridPane.margin>
-      </Label>
-      <Text fx:id="Task_name" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="194.0" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-         <GridPane.margin>
-            <Insets left="10.0" />
-         </GridPane.margin>
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Text>
-      <AnchorPane prefHeight="367.0" prefWidth="577.0" GridPane.columnSpan="3" GridPane.rowIndex="5">
+      <AnchorPane prefHeight="367.0" prefWidth="577.0" GridPane.columnSpan="3" GridPane.rowIndex="2">
          <children>
-            <Text fx:id="Task_description" layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
+            <Label layoutX="39.0" layoutY="5.0" text="Title :">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="EditTask_Title" layoutX="95.0" layoutY="5.0" />
+            <Text fx:id="Task_description" layoutX="31.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
-            <TextArea fx:id="EditTask_description" layoutX="123.0" layoutY="33.0" prefHeight="66.0" prefWidth="443.0" />
-            <Text fx:id="Task_author" layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
+            <TextArea fx:id="EditTask_description" layoutX="130.0" layoutY="55.0" prefHeight="51.0" prefWidth="443.0" />
+            <Text fx:id="Task_author" layoutX="31.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Label fx:id="EditTask_author" layoutX="89.0" layoutY="122.0" prefHeight="17.0" prefWidth="385.0" />
-            <Text fx:id="Task_creationDate" layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
+            <Label fx:id="EditTask_author" layoutX="92.0" layoutY="141.0" prefHeight="17.0" prefWidth="118.0" />
+            <Text fx:id="Task_creationDate" layoutX="30.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Label fx:id="EditTask_creationDate" layoutX="156.0" layoutY="162.0" prefHeight="17.0" prefWidth="118.0" />
-            <Text fx:id="Task_priority" layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
+            <Label fx:id="EditTask_creationDate" layoutX="151.0" layoutY="193.0" prefHeight="17.0" prefWidth="186.0" />
+            <Text fx:id="Task_priority" layoutX="31.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox fx:id="EditTask_priority" layoutX="94.0" layoutY="194.0" prefWidth="150.0" />
-            <Text fx:id="Task_state" layoutX="30.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="State :">
+            <ComboBox fx:id="EditTask_priority" layoutX="94.0" layoutY="230.0" prefWidth="150.0" />
+            <Text fx:id="Task_state" layoutX="30.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="State :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <RadioButton fx:id="EditTask_state_in_progress" layoutX="75.0" layoutY="238.0" mnemonicParsing="false" text="In progress" />
-            <RadioButton fx:id="EditTask_state_suspended" layoutX="169.0" layoutY="238.0" mnemonicParsing="false" text="Suspended" />
-            <RadioButton fx:id="EditTask_state_finished" layoutX="267.0" layoutY="238.0" mnemonicParsing="false" text="Finished" />
-            <Text fx:id="Task_deadline" layoutX="32.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
+            <RadioButton fx:id="EditTask_state_in_progress" layoutX="79.0" layoutY="266.0" mnemonicParsing="false" text="In progress" />
+            <RadioButton fx:id="EditTask_state_suspended" layoutX="169.0" layoutY="266.0" mnemonicParsing="false" text="Suspended" />
+            <RadioButton fx:id="EditTask_state_finished" layoutX="260.0" layoutY="266.0" mnemonicParsing="false" text="Finished" />
+            <Text fx:id="Task_deadline" layoutX="31.0" layoutY="322.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <DatePicker fx:id="EditTask_deadline" layoutX="110.0" layoutY="269.0" />
-            <Text fx:id="Task_performer" layoutX="32.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
+            <DatePicker fx:id="EditTask_deadline" layoutX="110.0" layoutY="303.0" />
+            <Text fx:id="Task_performer" layoutX="30.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox fx:id="EditTask_performer" layoutX="116.0" layoutY="305.0" prefWidth="150.0" />
-            <Button fx:id="Task_validateChanges" layoutX="566.0" layoutY="265.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="51.0" prefWidth="127.0" text="Save">
+            <ComboBox fx:id="EditTask_performer" layoutX="110.0" layoutY="345.0" prefWidth="150.0" />
+            <Button fx:id="Task_validateChanges" layoutX="431.0" layoutY="176.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="44.0" prefWidth="239.0" text="Save" textFill="#1bb250">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
+            <ImageView fx:id="NewTask_return" fitHeight="65.0" fitWidth="110.0" layoutX="670.0" layoutY="314.0" onMouseClicked="#handleReturn" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/retour.gif" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
-      <TextField fx:id="EditTask_Title" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Label text="Title :" GridPane.rowIndex="4" />
+      <ImageView fitHeight="76.0" fitWidth="227.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <image>
+            <Image url="@../image/Logoensim.gif" />
+         </image>
+      </ImageView>
    </children>
 </GridPane>
