--- a/TaskManager/bin/view/App.fxml
+++ b/TaskManager/bin/view/App.fxml
@@ -67,7 +67,7 @@
       <MenuButton fx:id="App_Options" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Options">
         <items>
           <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" onAction="#handleDisconnect" text="Action 2" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
         </items>
       </MenuButton>
       <Button fx:id="App_printButton" mnemonicParsing="false" onAction="#handlePrint" text="Button" GridPane.valignment="CENTER">
