--- a/TaskManager/bin/view/NewTask.fxml
+++ b/TaskManager/bin/view/NewTask.fxml
@@ -34,7 +34,7 @@
             <Font name="Palatino Linotype" size="20.0" />
          </font>
       </Label>
-      <Line endX="100.0" startX="900.0" GridPane.columnIndex="1">
+      <Line startX="850.0" GridPane.columnIndex="1">
          <GridPane.margin>
             <Insets top="30.0" />
          </GridPane.margin>
