--- a/TaskManager/bin/view/NewTask.fxml
+++ b/TaskManager/bin/view/NewTask.fxml
@@ -80,15 +80,15 @@
                </font>
             </Text>
             <ComboBox fx:id="NewTask_performer" layoutX="107.0" layoutY="238.0" prefWidth="150.0" visibleRowCount="3" />
-            <Button fx:id="NewTask_createTask" layoutX="451.0" layoutY="157.0" mnemonicParsing="false" onAction="#createTask" prefHeight="65.0" prefWidth="255.0" text="Create" textFill="#1bb250">
+            <Button fx:id="NewTask_createTask" layoutX="61.0" layoutY="304.0" mnemonicParsing="false" onAction="#createTask" prefHeight="35.0" prefWidth="137.0" text="Create" textFill="#1bb250">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
             <Text fx:id="NewTask_statusbar" layoutX="45.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-            <ImageView fx:id="NewTask_return" fitHeight="65.0" fitWidth="110.0" layoutX="665.0" layoutY="321.0" onMouseClicked="#handleReturn" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="NewTask_return" fitHeight="48.0" fitWidth="48.0" layoutX="712.0" layoutY="321.0" onMouseClicked="#handleReturn" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../image/retour.gif" />
+                  <Image url="@../image/logo_retour.png" />
                </image>
             </ImageView>
          </children>
