--- a/TaskManager/bin/view/Register.fxml
+++ b/TaskManager/bin/view/Register.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -32,16 +31,6 @@
          </font>
          <padding>
             <Insets top="25.0" />
-         </padding>
-      </Label>
-      <Circle fill="WHITE" radius="43.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2">
-         <GridPane.margin>
-            <Insets right="5.0" top="5.0" />
-         </GridPane.margin>
-      </Circle>
-      <Label text="LOGO" GridPane.columnIndex="2">
-         <padding>
-            <Insets right="30.0" top="40.0" />
          </padding>
       </Label>
       <Label text="Username :" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -91,26 +80,23 @@
             <Insets bottom="80.0" />
          </GridPane.margin>
       </Button>
-      <ImageView fitHeight="113.0" fitWidth="134.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets right="25.0" />
-         </GridPane.margin>
-         <image>
-            <Image url="@../../../../photoUtilisateur.png" />
-         </image>
-      </ImageView>
       <Text fx:id="Register_statusbar" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="321.13671875" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets top="50.0" />
          </GridPane.margin>
       </Text>
-      <ImageView fx:id="Register_return" fitHeight="116.0" fitWidth="146.0" onMouseClicked="#handleReturn" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <ImageView fx:id="Register_return" fitHeight="59.0" fitWidth="46.0" onMouseClicked="#handleReturn" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <image>
-            <Image url="@../image/retour.gif" />
+            <Image url="@../image/logo_retour.png" />
          </image>
          <GridPane.margin>
             <Insets right="20.0" top="50.0" />
          </GridPane.margin>
+      </ImageView>
+      <ImageView fitHeight="58.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+         <image>
+            <Image url="@../image/Logoensim.gif" />
+         </image>
       </ImageView>
    </children>
 </GridPane>
